tests/baselines/reference/privateNamesUnique-3.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesUnique-3.ts(4,25): error TS2339: Property '#x' does not exist on type 'Child'.
tests/cases/conformance/classes/members/privateNames/privateNamesUnique-3.ts(4,25): error TS18014: The property '#x' cannot be accessed on type 'Child' within this class because it is shadowed by another private identifier with the same spelling.


==== tests/cases/conformance/classes/members/privateNames/privateNamesUnique-3.ts (2 errors) ====
    class Parent {
        #x;
        copy(child: Child) {
            this.#x = child.#x; // Error: because private names are lexically scoped
                            ~~
!!! error TS2339: Property '#x' does not exist on type 'Child'.
                            ~~
!!! error TS18014: The property '#x' cannot be accessed on type 'Child' within this class because it is shadowed by another private identifier with the same spelling.
!!! related TS18017 tests/cases/conformance/classes/members/privateNames/privateNamesUnique-3.ts:2:5: The shadowing declaration of '#x' is defined here
!!! related TS18018 tests/cases/conformance/classes/members/privateNames/privateNamesUnique-3.ts:9:5: The declaration of '#x' that you probably intended to use is defined here
        }
    }
    
    class Child extends Parent {
        #x; // OK (Child's #x does not conflict, as paren't #x is not accessible)
    }
    
    const parent = new Parent();
    const child = new Child();
    parent.copy(child); // OK
    
    
    export default 3;
    